--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,11 +23,11 @@ export(report_link)
 export(report_parameters)
 export(report_render)
 export(report_section)
+export(report_set_titles)
 export(report_steps)
 export(report_tables)
 export(report_title)
 export(report_yaml)
-export(reportr_set_titles)
 importFrom(DT,datatable)
 importFrom(data.table,fread)
 importFrom(data.table,rbindlist)
